deploy: bef35f13ddb8df88455c4eaff3e2bd1fe8a8e679

--- a/website/supplemental_videos.html
+++ b/website/supplemental_videos.html
@@ -109,8 +109,7 @@
 
     <p> Podcast: <a href =>link</a>
 </p><p> <a href="supplemental_videos.html#https://www.youtube.com/embed/2KbOaCLS-cQ">(Video) Course Intro </a> </p>
-<p> <a href="supplemental_videos.html#https://youtu.be/4i47EJ4yNaY">(Video) Week 1 Friday </a> </p>
-<h2 id="https://www.youtube.com/embed/2KbOaCLS-cQ">(Video) Course Intro</h2><iframe height="600px" width="100%" src="https://www.youtube.com/embed/2KbOaCLS-cQ" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe><h2 id="https://youtu.be/4i47EJ4yNaY">(Video) Week 1 Friday</h2><iframe height="600px" width="100%" src="https://www.youtube.com/embed/4i47EJ4yNaY" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+<h2 id="https://www.youtube.com/embed/2KbOaCLS-cQ">(Video) Course Intro</h2><iframe height="600px" width="100%" src="https://www.youtube.com/embed/2KbOaCLS-cQ" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
 
 </body>
