--- a/website/unit1.html
+++ b/website/unit1.html
@@ -176,7 +176,7 @@
 <h2 id="Discussion-slides">Discussion slides</h2><p><a href="../files/DiscussionWeek1annotated.pptx">Download pptx slides</a></p>
 <h2 id="Lecture-Hall-(Week-0)">Lecture Hall (Week 0)</h2><br><iframe height="600px" width="100%" src="https://map.concept3d.com/?id=1005#!w/32.8738,-117.24095,0;32.88187,-117.23338,0;0" frameborder="0"></iframe>
 <h2 id="Lecture-Hall-(Week-1-and-beyond)">Lecture Hall (Week 1 and beyond)</h2><iframe height="600px" width="100%" src="https://map.concept3d.com/?id=1005#!m/553665" height="600px" width="100%" frameBorder="0"></iframe>
-<h2 id="https://www.youtube.com/embed/2KbOaCLS-cQ">(Video) Course Intro</h2><iframe height="600px" width="100%" src="https://www.youtube.com/embed/2KbOaCLS-cQ" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe><h2 id="https://youtu.be/4i47EJ4yNaY">(Video) Week 1 Friday</h2><iframe height="600px" width="100%" src="https://www.youtube.com/embed/4i47EJ4yNaY" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+<h2 id="https://www.youtube.com/embed/2KbOaCLS-cQ">(Video) Course Intro</h2><iframe height="600px" width="100%" src="https://www.youtube.com/embed/2KbOaCLS-cQ" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 	   </div>
 			
 	</div>
