deploy: bb799cb96e53bd3ae7e6e58efa14517d3805b96a

--- a/website/assignments.html
+++ b/website/assignments.html
@@ -114,11 +114,11 @@
 			<div id="accordion">
 				<div class="box outcome"  id="box1"><button type="button" class="collapsible"> 
 <h2 style= "line-height:20px;"> <i id="sideBtn1" class='bx bx-caret-right'></i> 
-			Hw</h2> </button> 
- <div class="boxContent" style="display: none;"> <hr> <p> Description</p> <p> Due: 10/5/21 at 11pm</p> <p> <a tabindex = "2" class="button PDF" aria-label="Download PDF" 
-		href=../output/assignments/hw.pdf download>PDF</a> <a tabindex = "2" style= "display: inline-block;" class="button LaTeX" aria-label="Download .LaTeX" 
-			href=../notes/assignments-flat/hw.tex download>LaTeX</a>  <a tabindex = "2" style= "display: inline-block;" class="button HTML" aria-label="Open HTML file of Document in New Tab" 
-			href= ../output/assignments/hw.html target="HTML">Raw HTML</a><br> <br> <iframe class="PDFjs" id="hw" src="web/viewer.html?file=../../output/assignments/hw.pdf" 
+			Hw1</h2> </button> 
+ <div class="boxContent" style="display: none;"> <hr> <p> Description of the assignment</p> <p> Due: 10/5/21 at 11pm</p> <p> <a tabindex = "2" class="button PDF" aria-label="Download PDF" 
+		href=../output/assignments/hw1.pdf download>PDF</a> <a tabindex = "2" style= "display: inline-block;" class="button LaTeX" aria-label="Download .LaTeX" 
+			href= download>LaTeX</a>  <a tabindex = "2" style= "display: inline-block;" class="button HTML" aria-label="Open HTML file of Document in New Tab" 
+			href= ../output/assignments/hw1.html target="HTML">Raw HTML</a><br> <br> <iframe class="PDFjs" id="hw1" src="web/viewer.html?file=../../output/assignments/hw1.pdf" 
 		title="webviewer" frameborder="0" width="300%" height="600"></iframe> <script>
 			 toggle = document.querySelector('.toggle input')
 
@@ -128,11 +128,11 @@
 			})
 		</script></div></div><div class="box outcome"  id="box2"><button type="button" class="collapsible"> 
 <h2 style= "line-height:20px;"> <i id="sideBtn2" class='bx bx-caret-right'></i> 
-			Hw</h2> </button> 
- <div class="boxContent" style="display: none;"> <hr> <p> This is a group optional assignment</p> <p> Due: 10/5/21 at 11pm</p> <p> <a tabindex = "2" class="button PDF" aria-label="Download PDF" 
-		href=../output/assignments/hw.pdf download>PDF</a> <a tabindex = "2" style= "display: inline-block;" class="button LaTeX" aria-label="Download .LaTeX" 
-			href=../notes/assignments-flat/hw.tex download>LaTeX</a>  <a tabindex = "2" style= "display: inline-block;" class="button HTML" aria-label="Open HTML file of Document in New Tab" 
-			href= ../output/assignments/hw.html target="HTML">Raw HTML</a><br> <label>Solutions<input type="checkbox" id="toggle-2">
+			Hw2</h2> </button> 
+ <div class="boxContent" style="display: none;"> <hr> <p> This is a group optional assignment</p> <p> Due: 10/7/21 at 11pm</p> <p> <a tabindex = "2" class="button PDF" aria-label="Download PDF" 
+		href=../output/assignments/hw2.pdf download>PDF</a> <a tabindex = "2" style= "display: inline-block;" class="button LaTeX" aria-label="Download .LaTeX" 
+			href= download>LaTeX</a>  <a tabindex = "2" style= "display: inline-block;" class="button HTML" aria-label="Open HTML file of Document in New Tab" 
+			href= ../output/assignments/hw2.html target="HTML">Raw HTML</a><br> <label>Solutions<input type="checkbox" id="toggle-2">
 				<span class="slider round"></span>
 				<script>
 					annotated2 = false;
@@ -140,18 +140,18 @@
 						if(annotated2  == false) {
 							console.log("false to true");
 							annotated2  = true;
-							annotations(true, "../output/assignments/hw.pdf","../files/hw.pdf", "hw")
+							annotations(true, "../output/assignments/hw2.pdf","../files/hw2.pdf", "hw2")
 						}
 						else {
 							console.log("true to false");
 							annotated2  = false;
-							annotations(false, "../output/assignments/hw.pdf","../files/hw.pdf", "hw")
+							annotations(false, "../output/assignments/hw2.pdf","../files/hw2.pdf", "hw2")
 						}
 					}
 
 					
 				</script>
-			 <br> <iframe class="PDFjs" id="hw" src="web/viewer.html?file=../../output/assignments/hw.pdf" 
+			 <br> <iframe class="PDFjs" id="hw2" src="web/viewer.html?file=../../output/assignments/hw2.pdf" 
 		title="webviewer" frameborder="0" width="300%" height="600"></iframe> <script>
 			 toggle = document.querySelector('.toggle input')
 
