--- a/website/overview_calendar.html
+++ b/website/overview_calendar.html
@@ -122,7 +122,8 @@
 <h2 style= "line-height:20px;"> <i id="sideBtn2" class='bx bx-caret-right'></i> 
 				Week 2: Topic 2</h2> </button> <div class="boxContent" style="display: none;"> <p>  Dates: 10/4/21-10/8/21</p><hr><div><dl> 
 <dt>Learning Materials</dt><dd><a href="unit2.html#Notes" >Notes</a>&emsp;<a href="unit2.html#Lecture-and-Discussion-podcast" >Lecture and Discussion podcast</a>&emsp;<a href="unit2.html#Discussion-slides" >Discussion slides</a>&emsp;</dd><dt>Due Dates</dt> 
-<dd><a href="assignments.html" target="_blank">hw1-title</a> <div class="badge due">Due: 10/5/21 at 11pm</div> </dd>
+<dd><a href="assignments.html" target="_blank">hw1</a> <div class="badge due">Due: 10/5/21 at 11pm</div> </dd>
+<dd><a href="assignments.html" target="_blank">hw2</a> <div class="badge due">Due: 10/7/21 at 11pm</div> </dd>
 <dd><a href="https://gradescope.com">Review Quiz</a> <div class="badge due">Due: 10/8/21 at 5pm</div> </dd>
 </dl></div></div></div><br><script>
 	var coll = document.getElementsByClassName("collapsible");
